# schedule-pet-shop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: eb80bafd0774_inserir_dado_inicial_na_tabela_admin.py
src/: main.py
src/data/interfaces/: interface_client_repository.py
src/data/use_cases/: client_create.py  client_create_use_case.py  client_delete_use_case.py  client_finder.py  client_finder_use_case.py  client_update_use_case.py
src/domain/models/: client.py
src/domain/use_cases/: interface_client_create.py  interface_client_finder.py  interface_client_update.py
src/drivers/email_sender/: config.py  email_service.py
src/drivers/jwt/: jwt_service.py
src/drivers/password_hasher/: password_hasher.py
src/drivers/payment_gateway/: payment_gateway_service.py
src/dto/: client_dto.py
src/errors/: error_handler.py
src/errors/types_errors/: __init__.py  http_Unauthorized.py  http_bad_request.py  http_conflit.py  http_not_found.py
src/infra/db/: database.py
src/infra/docs/: openapi.py
src/infra/dtos/: client_dto.py  pet_dto.py  schedule_dto.py  services_dto.py
src/infra/routes/: client_routes.py
src/main/adapters/: request_adapter.py
src/main/composers/: client_create_composer.py  client_delete_composer.py  client_finder_composer.py  client_update_composer.py
src/main/routes/: admin_routes.py  client_routes.py  pet_routes.py  schedule_routes.py  service_routes.py
src/main/server/: server.py
src/middlewares/: ensureAuthenticated.py
(+173 files in other folders)
