[project]
name = "schedule-pet-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "pylint>=3.3.4",
    "pytest-asyncio>=0.26.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "sqlmodel>=0.0.23",
    "pytest-mock>=3.14.0",
    "jwt>=1.3.1",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "python-decouple>=3.8",
    "alembic>=1.16.4",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]
